--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
     </activity>
 
     <activity android:name=".ui.activity.TextDividerActivity"/>
+    <activity android:name=".ui.activity.MoveImageViewActivity"/>
   </application>
 
 </manifest>
